fix: shop bar button spacing

--- a/themes/kinder/styles/misc.shop-bar.scss
+++ b/themes/kinder/styles/misc.shop-bar.scss
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: space-between;
     width: 60%;
-    padding: var(--spacing-8) var(--spacing-16);
+    padding: var(--spacing-16);
     transform: translate(-50%, calc(100% + var(--safe-area)));
     transition: var(--transition-expressive-default-spatial);
     border-radius: var(--radius-20);
@@ -76,8 +76,6 @@
     }
 
     @media (width <= 769px) {
-      padding-inline: var(--spacing-24);
-
       .product {
         display: none;
       }
